<resources>
    <string name="app_name">We make the District</string>
    <string name="start">Start</string>
    <string name="pinboard">Pinboard</string>
    <string name="neighborhood_mediation">Neighborhood mediation</string>
    <string name="repairs">Repairs</string>
    <string name="comment_placeholder">Enter your message here</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="new_post">New post</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="service">Service</string>
    <string name="gathering">Gathering</string>
    <string name="sustainability">Sustainability</string>
    <string name="type">Type</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="code_format_help">Example codes: XX-XX-XX or XX-XX-XXXX</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="idea">Idea</string>
    <string name="unknown">Unknown</string>
    <string name="check_for_notifications">Check for new notifications</string>
    <string name="no_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_code">Incorrect code</string>
    <string name="invalid_email">Invalid email</string>
    <string name="delete_account">Delete account</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="change_password">Change password</string>
    <string name="change_email">Change email</string>
    <string name="ideas">Ideas</string>
    <string name="deleted">Deleted</string>
    <string name="password_too_weak">Password too weak</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_login">Invalid login data</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
</resources>
